Tests/CompilerTests/negative/no-given-2.diagnostics.expected
negative/no-given-2.hylo:13.3-4: error: no coercion from '<T> (P<T>, P<A>) ==> [Void](let T) let -> Void' to '[Void](let B) let -> Void'
  f(B())
  ^
negative/no-given-2.hylo:13.3-4: note: no given instance of 'P<B>' in this scope
  f(B())
  ^
